--- a/RainOrShine/Base.lproj/LaunchScreen.storyboard
+++ b/RainOrShine/Base.lproj/LaunchScreen.storyboard
@@ -4,7 +4,6 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -21,23 +20,37 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rain or Shine" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IGZ-jc-5e1">
-                                <rect key="frame" x="137" y="323" width="101" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tcI-uH-NoO">
+                                <rect key="frame" x="0.0" y="623" width="375" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="n9i-th-Vxg"/>
+                                </constraints>
+                                <items/>
+                            </toolbar>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sTA-mD-1oF">
+                                <rect key="frame" x="0.0" y="20" width="375" height="45"/>
+                                <color key="backgroundColor" red="0.97647058823529409" green="0.97647058823529409" blue="0.97647058823529409" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="J26-je-rcP"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="IGZ-jc-5e1" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="EmS-dN-SP7"/>
-                            <constraint firstItem="IGZ-jc-5e1" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="zbR-LO-4g1"/>
+                            <constraint firstItem="tcI-uH-NoO" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="3lY-OZ-2in"/>
+                            <constraint firstAttribute="trailing" secondItem="tcI-uH-NoO" secondAttribute="trailing" id="8Fs-p7-gpj"/>
+                            <constraint firstItem="tcI-uH-NoO" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="DcA-Tf-OeN"/>
+                            <constraint firstItem="sTA-mD-1oF" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" id="KBK-Mj-aPt"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="tcI-uH-NoO" secondAttribute="bottom" id="OOu-Cx-5mM"/>
+                            <constraint firstItem="sTA-mD-1oF" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="RPj-Ve-FlK"/>
+                            <constraint firstItem="sTA-mD-1oF" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="dqm-oT-Z8j"/>
+                            <constraint firstAttribute="trailing" secondItem="sTA-mD-1oF" secondAttribute="trailing" id="v3a-3a-FU3"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
 </document>
