Fixed an issue where today's day would show up in the five day forecast when it is supposed to start with tomorrow... Fixed an issue where the future day forecast would not match the correct day. Changed computed var abbreviatedDayString in Date extension to func getAbbreviatedDayString(). getAbbreviatedDayString now takes a timeZoneIdentifier and adjusts the Date to align with that.

--- a/RainOrShine/FutureWeatherDayView.xib
+++ b/RainOrShine/FutureWeatherDayView.xib
@@ -25,7 +25,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="54" height="123"/>
                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Thu" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iyw-aP-RP6">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iyw-aP-RP6">
                         <rect key="frame" x="0.0" y="2" width="55" height="17"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="17" id="mNE-0e-eLg"/>
@@ -38,7 +38,7 @@
                         <rect key="frame" x="11" y="19" width="32" height="32"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="70 / 88" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UbG-Bv-2nE">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UbG-Bv-2nE">
                         <rect key="frame" x="0.0" y="51" width="54" height="14"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="14" id="KmU-Y7-CbF"/>
@@ -47,15 +47,11 @@
                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" minimumFontSize="7" translatesAutoresizingMaskIntoConstraints="NO" id="ymR-cc-zp8">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" minimumFontSize="7" translatesAutoresizingMaskIntoConstraints="NO" id="ymR-cc-zp8">
                         <rect key="frame" x="2" y="65" width="50" height="56"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="56" id="8TM-ZK-9sR"/>
                         </constraints>
-                        <string key="text">Line 1
-Line 2
-Line 3
-Line 4 Line 5</string>
                         <fontDescription key="fontDescription" type="system" pointSize="9"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
